# cpyd-t03

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  InputReader.cpp  InputReader.h  MPIInputReader.cpp  MPIInputReader.h  OpenMP.cpp  OpenMP.h  OpenMPInputReader.cpp  OpenMPInputReader.h  SequentialInputReader.cpp  SequentialInputReader.h  main.cpp
src/classes/: BaseInputReader.cpp  InputReader.cpp  MPIHostInputReader.cpp  MPIInputReader.cpp  MPINodeInputReader.cpp  OpenMPInputReader.cpp  SequentialInputReader.cpp
src/headers/: BaseInputReader.h  InputReader.h  MPIHostInputReader.h  MPIInputReader.h  MPINodeInputReader.h  OpenMPInputReader.h  Resultado.h  SequentialInputReader.h  Sorter.h
src/models/: Resultado.cpp  Sorter.cpp
